Travis permission fix (#1)
* attempt fix travis error

* attempt fix travis error

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ rvm:
 notifications:
   email: false
 
+before_install:
+  - chmod -R +x spec/fixtures/handlers
+
 script: bundle exec rspec
 
 # notifications:
