--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: ruby
 
+cache: bundler
+
 env:
   global:
   - CC_TEST_REPORTER_ID=1952d3719b67cc7478e3b6abc3625ea33d0c469c03accc6fe49de371a31c07da
