--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3'
 
 services:
+  bash:
+    build: .
+    entrypoint: bash
+    volumes:
+    - .:/app
+
   server:
     build: .
     command: server
